Explicit gc settings